--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,7 +14,8 @@
     "dotenv": "^17.0.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "react-router-dom": "^7.6.3"
+    "react-router-dom": "^7.6.3",
+    "react-toastify": "^11.0.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.29.0",
